--- a/02college/css/jquery.bxslider.css
+++ b/02college/css/jquery.bxslider.css
@@ -40,7 +40,7 @@ ul.bxslider {
 .bx-wrapper .bx-controls-auto {
   position: absolute;
   bottom: -30px;
-  width: 100%;
+  _width: 100%;
 }
 /* LOADER */
 .bx-wrapper .bx-loading {
